--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,36 +4,58 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+  @apply h-24 bg-gradient-to-r from-teal-400 to-blue-500;
+  
+}
+
+
 * > *{
   font-family:'Roboto',sans-serif;
 }
 
-/* :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+nav{
+  @apply bg-gray-800 text-zinc-300;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+form{
+  @apply bg-gray-100 shadow-md rounded px-8 pt-6 pb-8 mb-4;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-} */
+label{
+  @apply block mb-2 text-sm font-medium text-gray-900 dark:text-white py-2 px-2;
+}
 
 .input-text{
-  @apply mt-1 block w-60 px-3 py-2 bg-white border-slate-300 rounded-full text-sm shadow-sm placeholder-slate-500;
-  @apply focus:outline-none focus:border-sky-500 focus:ring-2 focus:bg-sky-200
+  @apply mt-1 block w-60 px-3 py-4 bg-white border-slate-300 rounded-full text-sm shadow-sm placeholder-slate-500;
+  @apply focus:outline-none focus:border-sky-500 focus:ring-2 focus:bg-sky-200;
 
+}
+
+.cards{
+  @apply grid gap-4 grid-cols-4 py-4 px-4;
+}
+
+.card{
+  @apply max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 items-center text-center;
+}
+
+img{
+  @apply h-auto max-w-lg mx-auto;
+  width:auto;
+  height: auto;
+}
+
+
+
+.page-description{
+  @apply text-lg py-6 px-6;
+}
+
+.media-tags {
+  @apply inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2;
+
+}
+
+button{
+  @apply bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-2 border border-blue-500 hover:border-transparent rounded;
 }
