--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -45,7 +45,7 @@ img{
 
 
 .page-description{
-  @apply text-lg py-6 px-6;
+  @apply font-semibold text-lg py-6 px-6;
 }
 
 .media-tags {
@@ -56,3 +56,4 @@ img{
 button{
   @apply bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-2 border border-blue-500 hover:border-transparent rounded;
 }
+
