--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,17 +23,18 @@ label{
 }
 
 .input-text{
-  @apply mt-1 block w-60 px-3 py-4 bg-white border-slate-300 rounded-full text-sm shadow-sm placeholder-slate-500;
+  @apply mt-1 block w-60 px-3 py-4 bg-white border-slate-300 rounded-full text-zinc-300 shadow-sm placeholder-slate-500;
   @apply focus:outline-none focus:border-sky-500 focus:ring-2 focus:bg-sky-200;
 
 }
+
 
 .cards{
   @apply grid gap-4 grid-cols-4 py-4 px-4;
 }
 
 .card{
-  @apply max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 items-center text-center;
+  @apply max-w-sm bg-gray-200 border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 items-center text-center;
 }
 
 img{
@@ -56,4 +57,5 @@ img{
 button{
   @apply bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-2 border border-blue-500 hover:border-transparent rounded;
 }
+
 
