--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 body{
-  @apply h-24 bg-gradient-to-r from-teal-400 to-blue-500;
+  @apply h-24 bg-gradient-to-r from-teal-500 to-blue-500;
   
 }
 
@@ -14,39 +14,49 @@ body{
   font-family:'Roboto',sans-serif;
 }
 
-nav{
-  @apply bg-gray-800 text-zinc-300;
+
+.page-description{
+  @apply font-semibold text-lg py-6 px-6;
 }
 
-label{
-  @apply block mb-2 text-sm font-medium text-gray-900 dark:text-white py-2 px-2;
+
+/* global css for forms login - signup - profile*/
+
+.formik-form{
+  @apply max-w-lg mx-auto mt-10;
+
 }
+
+.formik-label{
+  @apply block text-gray-700 text-sm font-bold mb-2 py-4;
+
+}
+
+.formik-error{
+  @apply text-white text-sm;
+}
+
 
 .input-text{
-  @apply mt-1 block w-60 px-3 py-4 bg-white border-slate-300 rounded-full text-zinc-300 shadow-sm placeholder-slate-500;
+  @apply mt-1 block w-60 px-3 py-4 bg-white border-slate-300 rounded-full shadow-sm placeholder-slate-500;
   @apply focus:outline-none focus:border-sky-500 focus:ring-2 focus:bg-sky-200;
 
 }
 
+/* global css for media */
 
 .cards{
-  @apply grid gap-4 grid-cols-4 py-4 px-4;
+  @apply grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 py-4 px-4; 
 }
 
 .card{
-  @apply max-w-sm bg-gray-200 border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 items-center text-center;
+  @apply max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl bg-gray-200 border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border;
 }
 
 img{
-  @apply h-auto max-w-lg mx-auto;
-  width:auto;
-  height: auto;
-}
-
-
-
-.page-description{
-  @apply font-semibold text-lg py-6 px-6;
+@apply h-auto max-w-lg mx-auto;
+width:auto;
+height: auto;
 }
 
 .media-tags {
@@ -54,8 +64,13 @@ img{
 
 }
 
-button{
-  @apply bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-2 border border-blue-500 hover:border-transparent rounded;
+.btn-red {
+  @apply py-2 px-4 bg-red-500 text-white text-sm font-medium rounded;
+  @apply hover:bg-red-700;
+  @apply focus:outline-none focus:ring-2 focus:ring-red-600 focus:ring-opacity-50;
 }
 
 
+button{
+  @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full;
+}
