refactor + 404 page added

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,3 +74,7 @@ height: auto;
 button{
   @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full;
 }
+
+.on-hover{
+  @apply hover:text-white;
+}
